# csfd

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  scraper.py
csfd/: asgi.py  db_model.py  model.py  models.py  new_model.py  scraper.py  settings.py  string_helper.py  tests.py  tests_views.py  urls.py  views.py  wsgi.py
csfd/migrations/: 0001_initial.py
templates/: actor_detail.html  index.html  movie_detail.html  search_results.html
