[tool.poetry]
name = "csfd"
version = "0.1.0"
description = ""
authors = ["Jakub Vonšovský <jakub.vonsovsky@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.5"
Django = "^3.1.2"
requests = "^2.24.0"
Unidecode = "1.1.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
